[gd_scene load_steps=3 format=3 uid="uid://c4ioesrs574d7"]

[ext_resource type="Script" uid="uid://cdgec8fxy03ep" path="res://scenes/ui/card_tooltip_popup.gd" id="1_ckt8b"]
[ext_resource type="PackedScene" uid="uid://d4g7iin5x7648" path="res://cards/menu_card/menu_card.tscn" id="2_xpdyn"]

[node name="CardTooltipPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ckt8b")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0505995, 0.0654161, 0.143824, 0.619608)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -137.0
offset_right = 400.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2

[node name="TooltipCardContainer" type="CenterContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MenuCard" parent="VBoxContainer/TooltipCardContainer" instance=ExtResource("2_xpdyn")]
layout_mode = 2

[node name="CardDescription" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "Card Description Error Card Description Error Card Description Error Card Description Error "
fit_content = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
